# dux-os

./: .gitmodules  CMakeLists.txt  README.md
cmake/arch/x86/: i686-elf.cmake
include/dux/: types.h
include/dux/system/device/: IBlockDevice.h  ICharacterDevice.h  IDevice.h
